--- a/templates/borough.html
+++ b/templates/borough.html
@@ -24,10 +24,9 @@
 <div style="margin:3px;float:left;height:80vh;width:78.5%">
   <div style="height:55vh;margin:3px;background-color:black;color:black">
       <div id="graph" class="chart" style="margin-top:5px">
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
-	    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-	    <!-- Plotly.js -->
-   	 <script src="https://d14fo0winaifog.cloudfront.net/plotly-basic.js"></script>
+       <script src="/static/d3.min.js"></script>
+       <script src="/static/jquery-2.1.4.min.js"></script>
+       <script src="/static/plotly-latest.min.js"></script>
 
    	    <script type="text/javascript">
 
@@ -47,10 +46,9 @@
     </form>
 
     <div id="gauge" class="chart" style="margin-top:5px">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
-	    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-	    <!-- Plotly.js -->
-   	 <script src="https://d14fo0winaifog.cloudfront.net/plotly-basic.js"></script>
+        <script src="/static/d3.min.js"></script>
+   	<script src="/static/jquery-2.1.4.min.js"></script>
+        <script src="/static/plotly-latest.min.js"></script>>
 
    	    <script type="text/javascript">
 
