--- a/templates/borough.html
+++ b/templates/borough.html
@@ -39,7 +39,7 @@
     <form onsubmit="testContent()">
         <h3>Pollutants on the Day</h3>
         <label for="date">Choose Date:</label>
-        <input type="hidden" name="borough" value="Camden" />
+        <input type="hidden" name="borough" value={{borough}} />
         <input type="date" onload='2020-30-06' value=date name="val_date">
         <input type="submit">
 
