--- a/templates/boroughwise.html
+++ b/templates/boroughwise.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
 
-    <div style="width:40%;float:left" >
-        <img src = "/static/London.gif" width="600" height="600" align="center">
+    <div style="width:40%;float:left;display:flex" >
+        <img src = "/static/London.gif" width=100% height="600" align="center">
     </div>
-<div style="width:60%;float:left">
+<div style="width:60%;float:left;display:flex;left-padding:20px">
 
 <td>
  <form method="post" action="borough">
