--- a/templates/borough.html
+++ b/templates/borough.html
@@ -35,7 +35,7 @@
     <form>
         <h3>Pollutants on the Day</h3>
         <label>Choose Date:</label>
-        <input type="hidden" name="borough" value={{borough}} />
+        <input type="hidden" name="borough" value="{{borough}}" />
         <input type="date" name="val_date" value={{display_date}} min='2018-01-01' max='2021-06-30' />
         <input type="submit">
 
