Update Pollutants on the Day text

--- a/templates/borough.html
+++ b/templates/borough.html
@@ -36,7 +36,7 @@
   </div>
   <div style="margin:3px;height:10%;color:white">
     <form>
-        <h3>Pollutants on the Day</h3>
+        <h2>Pollutants on the Day (ug/m3)</h2>
         <label>Choose Date:</label>
         <input type="hidden" name="borough" value="{{borough}}" />
         <input type="date" name="val_date" value={{display_date}} min='2018-01-01' max='2021-06-30' />
