--- a/templates/about.html
+++ b/templates/about.html
@@ -5,6 +5,14 @@
     <title>About</title>
 </head>
 <body>
-<h3 style="color:white">About</h3>
+<div style="color:white;padding-left:20px">
+    <br><b>Data Source:</b> London Air Quality Network (Available at
+    <a href="url">https://www.londonair.org.uk/london/asp/datadownload
+        .asp</a>)</br>
+    <br><b>Technology Stack:</b> Python, Flask, HTML, JavaScript, CSS</br>
+    <br><b>Application Development By:</b> Meenakshi Nagchaudhuri</br>
+    <br><b>Contact:</b> meenakshi.nagchaudhuri@kcl.ac.uk</br>
+
+</div>
 </body>
 {% endblock %}
