--- a/templates/home.html
+++ b/templates/home.html
@@ -2,17 +2,11 @@
 {% block content %}
 <body>
 <div style="width:28%;float:left;display:flex">
-        <img src = "/static/London.gif" width="500" height="500" align="center">
+        <img src = "/static/London.gif" width=100% height="500" align="center">
 </div>
-<div
-        style="width:72%;float:right;display:flex;right-padding:10px;color:white;padding-top:20px">
-    <div style="width:100%;height:550px;text-align:center">
-
-<!--        <h1>Analysis of London Air Quality</h1>-->
-
-
-        <div
-                style="text-align:justify;text-justify: inter-word;width:96%;font-size: 20px">The impact analysis of Covid-19 on London Air Quality has been performed on twenty five boroughs as data was not available for the other boroughs. The analysis has been done for boroughs having less than 60% missing data. The boroughs with missing data has been color coded as grey. The GIF image on the left shows the change in average daily Air Quality Index(AQI) in the boroughs between the year 2018 and 2021. The period of analysis for Covid-19 restrictions is from 24th March,2020 to 30th Jun,2021. In the entire period of analysis, there has been three national lockdowns and this also includes the time where the restrictions were not very strict. However, the average value of the air pollutants in the entire period has seen a net reduction thus showing that some level of restrictions by the entire population can contribute towards the betterment of the overall air quality.
+<div style="width:72%;float:left;display:flex;color:white;padding-top:20px">
+    <div style="text-align:justify;text-justify:inter-word;width:96%;font-size:20px">
+        The impact analysis of Covid-19 on London Air Quality has been performed on twenty five boroughs as data was not available for the other boroughs. The analysis has been done for boroughs having less than 60% missing data. The boroughs with missing data has been color coded as grey. The GIF image on the left shows the change in average daily Air Quality Index(AQI) in the boroughs between the year 2018 and 2021. The period of analysis for Covid-19 restrictions is from 24th March,2020 to 30th Jun,2021. In the entire period of analysis, there has been three national lockdowns and this also includes the time where the restrictions were not very strict. However, the average value of the air pollutants in the entire period has seen a net reduction thus showing that some level of restrictions by the entire population can contribute towards the betterment of the overall air quality.
 <br>
             <br><b>Overall Analysis:</b>
 During the period of Covid-19 restrictions, London has seen a sharp decline in the emission of oxides of nitrogen in all the twenty five boroughs for which statistical analysis was conducted. This positive change in the environment is considered to be a relief amidst the pandemic as it has improved the quality of air to a great extent in London. Particulate matters were also on the fall as seen in the analysis, ten out of fourteen boroughs saw a fall in PM2.5, whereas eighteen out of twenty four boroughs saw a rise in the emission of PM10. The data for carbon monoxide was available for only two boroughs among which one borough saw a reduction in the emission of CO. Richmond upon Thames saw the highest reduction in the emission of oxides of nitrogen by an enormous rate of 65.38%. Hillingdon saw the highest elevation in the level of PM2.5 and PM10 during the pandemic, by 48% and 25.65% respectively. As mentioned, the emission of sulphur dioxide and ozone have also increased significantly during the Covid-19 restrictions. Bexley saw the highest rate of increase for sulphur dioxide at 61.73% whereas Lewisham dealt with the exorbitant surge in the level of ozone by 69.65%. Though the emission of oxides of nitrogen saw a significant decline, sulphur dioxide was on the rise for majority of the analysed boroughs and surprisingly, all the boroughs for which the data for ozone was available, saw a massive rise in the emission of ozone in all the thirteen boroughs. This is a matter of concern as there has been a drastic growth in the ground level ozone during the pandemic. Due to the restrictions that were imposed to stop the spread of the virus, our daily household activities increased manifold times. Though the emission of harmful pollutants decreased, London saw a significant rise in the measure of ground level ozone and sulphur dioxide.
@@ -23,7 +17,7 @@ For detailed borough level analysis, please click on the 'Borough' tab and choos
 4) Date and value of minimum concentration of each air pollutant
 5) Graphics Interchange Format(GIF) Image for change in average daily AQI
 </div>
-    </div>
+
 
 </div>
 </body>
