--- a/templates/home.html
+++ b/templates/home.html
@@ -12,10 +12,10 @@
 During the period of Covid-19 restrictions, London has seen a sharp decline in the emission of oxides of nitrogen in all the twenty five boroughs for which statistical analysis was conducted. This positive change in the environment is considered to be a relief amidst the pandemic as it has improved the quality of air to a great extent in London. Particulate matters were also on the fall as seen in the analysis, ten out of fourteen boroughs saw a fall in PM2.5, whereas eighteen out of twenty four boroughs saw a rise in the emission of PM10. The data for carbon monoxide was available for only two boroughs among which one borough saw a reduction in the emission of CO. Richmond upon Thames saw the highest reduction in the emission of oxides of nitrogen by an enormous rate of 65.38%. Hillingdon saw the highest elevation in the level of PM2.5 and PM10 during the pandemic, by 48% and 25.65% respectively. As mentioned, the emission of sulphur dioxide and ozone have also increased significantly during the Covid-19 restrictions. Bexley saw the highest rate of increase for sulphur dioxide at 61.73% whereas Lewisham dealt with the exorbitant surge in the level of ozone by 69.65%. Though the emission of oxides of nitrogen saw a significant decline, sulphur dioxide was on the rise for majority of the analysed boroughs and surprisingly, all the boroughs for which the data for ozone was available, saw a massive rise in the emission of ozone in all the thirteen boroughs. This is a matter of concern as there has been a drastic growth in the ground level ozone during the pandemic. Due to the restrictions that were imposed to stop the spread of the virus, our daily household activities increased manifold times. Though the emission of harmful pollutants decreased, London saw a significant rise in the measure of ground level ozone and sulphur dioxide.
            <br><br><b>Borough Wise Analysis:</b>
 For detailed borough level analysis, please click on the 'Borough' tab and choose a borough from the list. Each borough analysis shows four visualisations:
-<br>1) Line chart to showcase the change in average weekly concentration of each air pollutant in the period of analy<br>sis
-<br>2) Gauge chart or Speedometer chart to represent the raw value of each air pollutant for a particular date betwee<br>n 1st Jan, 2018 and 30th Jun, 2021
-<br>4) Date and value of minimum concentration of each air pollutant
-<br>5) Graphics Interchange Format(GIF) Image for change in average daily AQI
+1) Line chart to showcase the change in average weekly concentration of each air pollutant in the period of analysis
+2) Gauge chart or Speedometer chart to represent the raw value of each air pollutant for a particular date between 1st Jan, 2018 and 30th Jun, 2021
+4) Date and value of minimum concentration of each air pollutant
+5) Graphics Interchange Format(GIF) Image for change in average daily AQI
 </div>
 
 
