--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
 <body>
 <div style="color:white;padding-left:20px">
     <br><b>Data Source:</b> London Air Quality Network (Available at
-    <a href="url">https://www.londonair.org.uk/london/asp/datadownload.asp</a>)</br>
+    <a href="https://www.londonair.org.uk/london/asp/datadownload.asp">London Air)</a><br>
     <br><b>Technology Stack:</b> Python, Flask, HTML, JavaScript, CSS</br>
     <br><b>Application Development By:</b> Meenakshi Nagchaudhuri</br>
     <br><b>Contact:</b> meenakshi.nagchaudhuri@kcl.ac.uk</br>
